# Nexus-Mind

./: .gitignore  README.md  docker-compose.yml  pyrightconfig.json
ai/: .env.example  Dockerfile  alembic.ini  pyproject.toml
ai/alembic/: env.py
ai/alembic/versions/: 001_create_users_table.py  002_create_datasets_table.py  003_create_inference_table.py
ai/src/nexus_ai/: __init__.py  config.py  main.py
ai/src/nexus_ai/api/: router.py
ai/src/nexus_ai/api/v1/: auth.py  datasets.py  health.py  inference.py  maps.py  projects.py
ai/src/nexus_ai/core/: dependencies.py  logging.py  middleware.py  security.py
ai/src/nexus_ai/db/: redis.py  session.py
ai/src/nexus_ai/ml/: explainability.py  geology_features.py  predictor.py  preprocessing.py
ai/src/nexus_ai/ml/pipelines/: __init__.py  cnn_pipeline.py  ensemble_pipeline.py  random_forest.py  xgboost_pipeline.py
ai/src/nexus_ai/ml/vision/: cnn_model.py  dataset.py
ai/src/nexus_ai/models/: dataset.py  inference.py  user.py
ai/src/nexus_ai/schemas/: auth.py  dataset.py  inference.py
ai/src/nexus_ai/services/: auth_service.py  dataset_service.py  inference_service.py  storage_service.py
ai/src/nexus_ai/tasks/: celery_app.py  ml_tasks.py
ai/src/nexus_ai/utils/: geo_metadata.py  geo_processing.py  validators.py
frontend/: Dockerfile  README.md  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/(dashboard)/: layout.tsx  page.tsx
frontend/src/components/analytics/: feature-importance-chart.tsx  prediction-trend-chart.tsx  stat-card.tsx
frontend/src/lib/: api.ts
frontend/src/store/: authStore.ts  mapStore.ts
(+12 files in other folders)
