[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "nexus-mind-ai"
version = "0.1.0"
description = "NEXUS-MIND AI/ML Geospatial Backend"
requires-python = ">=3.12"

dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",

    # Settings & validation
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",

    # Database
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "geoalchemy2>=0.15.0",

    # Cache
    "redis[hiredis]>=5.0.0",

    # Auth
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",

    # HTTP client
    "httpx>=0.27.0",

    # Logging
    "structlog>=24.1.0",

    # ML
    "torch>=2.3.0",
    "xgboost>=2.1.0",
    "scikit-learn>=1.5.0",
    "shap>=0.45.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "rasterio>=1.3.0",
    "shapely>=2.0.0",

    # Object Storage
    "boto3>=1.34.0",

    # Task queue
    "celery[redis]>=5.4.0",

    # Utils
    "python-multipart>=0.0.9",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27.0",
    "pytest-mock>=3.14",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
